--- a/www/question.html
+++ b/www/question.html
@@ -70,6 +70,9 @@
     function decipherEvent(eventData) {
       if (eventData["$class"] == "smartquora.question.QuestionAwarded") {
         identityMap = {};
+        // for (var i = document.getElementById("ca-table").rows.length; i > 0; i--) {
+        //   document.getElementById("tableId").deleteRow(i - 1);
+        // }
         paintForm();
       }
       if (eventData["$class"] == "smartquora.answer.AnswerVoted") {
@@ -236,78 +239,78 @@
   <div class="container">
     <h2 class="display-5 text-center my-4">Question View</h2>
     <!--<form>-->
-      <div class="form-group">
-        <label for="question-id">Question Id</label>
-        <input class="form-control form-control-sm" type="text" id="question-id" required="required" maxlength="76" readonly>
-      </div>
-      <div class="form-group">
-        <label for="question-description">Question</label>
-        <textarea id="question-description" rows="3" class="form-control" readonly></textarea>
-      </div>
-      <div class="form-row">
-        <div class="col-md-3">
-          <div class="form-group">
-            <label for="status">Owner</label>
-            <input class="form-control form-control-sm" type="text" id="owner" required="required" readonly>
-          </div>
-        </div>
-        <div class="col-md-2">
-          <div class="form-group">
-            <label for="status">Status</label>
-            <input class="form-control form-control-sm" type="text" id="status" required="required" readonly>
-          </div>
-        </div>
-        <div class="col-md-1">
-          <div class="form-group">
-            <label for="stake">Stake</label>
-            <input class="form-control form-control-sm" type="text" id="stake" required="required" readonly>
-          </div>
-        </div>
-        <div class="col-md-1">
-          <div class="form-group">
-            <label for="balance">Balance</label>
-            <input class="form-control form-control-sm" type="text" id="balance" required="required" readonly>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="form-group">
-            <label for="created">Created</label> &nbsp;
-            <input class="form-control form-control-sm" type="text" id="created" required="required" readonly>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="form-group">
-            <label for="due">Due</label> &nbsp;
-            <input class="form-control form-control-sm" type="text" id="due" required="required" readonly>
-          </div>
+    <div class="form-group">
+      <label for="question-id">Question Id</label>
+      <input class="form-control form-control-sm" type="text" id="question-id" required="required" maxlength="76" readonly>
+    </div>
+    <div class="form-group">
+      <label for="question-description">Question</label>
+      <textarea id="question-description" rows="3" class="form-control" readonly></textarea>
+    </div>
+    <div class="form-row">
+      <div class="col-md-3">
+        <div class="form-group">
+          <label for="status">Owner</label>
+          <input class="form-control form-control-sm" type="text" id="owner" required="required" readonly>
         </div>
       </div>
-      <hr>
-      <div id="current-answers">
-        <table id="ca-table" class="table table-sm table-hover table-striped">
-          <thead>
-            <tr>
-              <th>Id</th>
-              <th>Owner</th>
-              <th>Answer</th>
-              <th>Votes</th>
-              <th>Earnings</th>
-              <th>Engage</th>
-            </tr>
-          </thead>
-          <tbody id="ca-table-body">
-          </tbody>
-        </table>
+      <div class="col-md-2">
+        <div class="form-group">
+          <label for="status">Status</label>
+          <input class="form-control form-control-sm" type="text" id="status" required="required" readonly>
+        </div>
       </div>
-      <hr>
+      <div class="col-md-1">
+        <div class="form-group">
+          <label for="stake">Stake</label>
+          <input class="form-control form-control-sm" type="text" id="stake" required="required" readonly>
+        </div>
+      </div>
+      <div class="col-md-1">
+        <div class="form-group">
+          <label for="balance">Balance</label>
+          <input class="form-control form-control-sm" type="text" id="balance" required="required" readonly>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="form-group">
+          <label for="created">Created</label> &nbsp;
+          <input class="form-control form-control-sm" type="text" id="created" required="required" readonly>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="form-group">
+          <label for="due">Due</label> &nbsp;
+          <input class="form-control form-control-sm" type="text" id="due" required="required" readonly>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div id="current-answers">
+      <table id="ca-table" class="table table-sm table-hover table-striped">
+        <thead>
+          <tr>
+            <th>Id</th>
+            <th>Owner</th>
+            <th>Answer</th>
+            <th>Votes</th>
+            <th>Earnings</th>
+            <th>Engage</th>
+          </tr>
+        </thead>
+        <tbody id="ca-table-body">
+        </tbody>
+      </table>
+    </div>
+    <hr>
 
-      <div class="form-group">
-        <label for="your-answer">Your Answer</label>
-        <textarea id="your-answer" rows="3" class="form-control" ></textarea> &nbsp;
-        <div class="text-md-center">
-          <button class="btn btn-primary" onclick="postAnswer()">Answer</button><br/>
-        </div>
+    <div class="form-group">
+      <label for="your-answer">Your Answer</label>
+      <textarea id="your-answer" rows="3" class="form-control"></textarea> &nbsp;
+      <div class="text-md-center">
+        <button class="btn btn-primary" onclick="postAnswer()">Answer</button><br/>
       </div>
+    </div>
     <!-- </form> -->
   </div>
   <hr>
