--- a/www/upload-card.html
+++ b/www/upload-card.html
@@ -88,6 +88,12 @@
       }
     }
 
+    function submit() {
+      showInfoAlert("Card Uploaded!");
+      document.getElementById("new-card-name").value = "";
+      document.getElementById("card-file").value = "";
+      return;
+    }
 
   </script>
 </head>
@@ -113,7 +119,7 @@
               <p></p>
             </div>
             <div class="text-md-center">
-              <button class="btn btn-primary" type="submit" >Upload Card</button>
+              <button class="btn btn-primary" type="submit" onclick="submit()" >Upload Card</button>
             </div>
           </div>
         </form>
